--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "body-parser": "^1.19.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
+    "fcm-node": "^1.5.2",
+    "firebase-admin": "^8.9.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.2.7",
     "mongoose": "^5.6.0"
